<resources>
    <string name="app_name">Solalat</string>
    <string name="app_license">Copyright@Raantech Company</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_preference_language">Please choose your preferred language!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="start">Start</string>
    <string name="btn_try_again">try Again</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_server">timeout</string>
    <string name="error_msg">Something went wrong</string>
    <string name="session_ended">Session Ended</string>
    <string name="screen_shot_denied">Grant stoarge permission to take screenshot!</string>
    <string name="camera_permission_denied">Grant camera permission to take the 3 seconds video</string>
    <string name="screen_shot">take screenshot</string>
    <string name="alert_dialog_title">Solalat Provider</string>
    <string name="alert_dialog_all_info_in_english">All information entered must be in English</string>
    <string name="not_available_yet">This feature is coming soon to Al Alami app!</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="loading">Loading …</string>
    <string name="under_development">Under Development</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_string" />
    <string name="you_re_not_logged_in">You\'re Not Logged In.</string>
    <string name="you_need_to_login_into_your_account_to_see_this_screen">You need to login into your account\nto see this screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="concat_two_string">%s %s</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="no_activity_data_chart_err">No Data Yet !</string>
    <string name="choose_image_folders_mode_title">select Image</string>
    <string name="choose_image_done_button_txt">Done</string>
    <string name="choose_image_max_select_message">You have reached selection limit!</string>
    <string name="general_err_msg">"SomeThing Happened Please Try Again "</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="must_be_at_least">must be at least </string>
    <string name="must_not_be">must not be </string>
    <string name="characters"> characters</string>
    <string name="numbers"> numbers</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="email_not_valid_err">Enter a valid email address (example: aaa@bbb.ccc)</string>
    <string name="phone_not_valid_err">Enter a valid phone number (example: 07xxxxxxx)</string>
    <string name="password_not_valid_err">Enter a valid password (example: P@ssw0rd)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="password_not_match">Password not match</string>
    <string name="text_not_valid_err">Enter a valid Text</string>
    <string name="date_not_valid_err">Enter a valid date</string>
    <string name="time_not_valid_err">Enter a valid time</string>
    <string name="digits">digits</string>
    <string name="next">NEXT</string>
    <string name="select_time">Select time</string>
    <string name="submit">Submit</string>
    <string name="data_missing">Data missing</string>
    <string name="please_fill_data_fields">Please fill all the data fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_date">Date</string>
    <string name="time">Time</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="number">Number</string>
    <string name="new_update">NEW UPDATE!</string>
    <string name="there_s_a_new_update_available_for_fly_us_vip">There’s a new update available for\nFLY US VIP</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="close_app">CLOSE APP</string>
    <string name="important_update">IMPORTANT UPDATE!</string>
    <string name="completed_successfully">Completed Successfully</string>
    <string name="continue_">Continue</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="logout">Logout</string>
    <string name="title_on_boarding_1">title_on_boarding_1</string>
    <string name="description_on_boarding_1">description_on_boarding_1</string>
    <string name="title_on_boarding_2">title_on_boarding_2</string>
    <string name="description_on_boarding_2">description_on_boarding_2</string>
    <string name="title_on_boarding_3">title_on_boarding_3</string>
    <string name="description_on_boarding_3">description_on_boarding_3</string>
    <string name="title_on_boarding_4">title_on_boarding_4</string>
    <string name="description_on_boarding_4">description_on_boarding_4</string>
    <string name="verification">Verification</string>
    <string name="please_check_you_message_for_a_four_digit_security_code_and_enter_it_below">Please check you message for a four-digit security code and enter it below.</string>
    <string name="i_didn_t_receive_the_code">I didn’t receive the code</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify">Verify</string>
    <string name="add_Media">Add Media</string>
    <string name="media">Media</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_available_data">-- No Available Data --</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_my_purchases">My purchases</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_language">Language</string>
    <string name="menu_report_provider">Report provider</string>
    <string name="menu_technical_support">Technical Support</string>
    <string name="menu_about_us">About solalat</string>
    <string name="solalat">Solalat</string>
    <string name="nav_home">Home</string>
    <string name="nav_medical_services">Medical</string>
    <string name="nav_accessories">Accessories</string>
    <string name="nav_rent_barn">Rent stables</string>
    <string name="nav_transport_service">Transport</string>
    <string name="contact_us">Contact us</string>
    <string name="search_what_to_ask_here">Search here</string>
    <string name="no_faq_s_found">No Faq\'s Found</string>
    <string name="help_request">Help Request</string>
    <string name="didnt_find_answer">Didn\'t find answer</string>
    <string name="call_us_now">Call us now</string>
    <string name="search_here">Search here</string>
    <string name="location">Location</string>
    <string name="please_pick_location">Please pick location</string>
    <string name="product_count_">%s products in this section</string>
    <string name="available_at">available at %s</string>
    <string name="all_cities">All Cities</string>
    <string name="cities">Cities</string>
    <string name="please_select_city">Please select city</string>
    <string name="all">All</string>
    <string name="sell">Sell</string>
    <string name="auction">Auction</string>
    <string name="horse_title">%s / %s years</string>
    <string name="year">y</string>
    <string name="month">mm</string>
    <string name="week">w</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="now">Now</string>
    <string name="call_us">Call us</string>
    <string name="contact_us_whatsapp">Contact us whatsapp</string>
    <string name="address">Address</string>
    <string name="services_provided">Services provided</string>
    <string name="prices">Prices : </string>
    <string name="truck_owner_name">Truck owner name</string>
    <string name="truck_type">Truck type</string>
    <string name="manufacturingYear">Manufacturing Year</string>
    <string name="plate_number">Plate number</string>
    <string name="provided_cities">Provided cities</string>
    <string name="call_now">Call now</string>
    <string name="km">%s km</string>
    <string name="add_horse">Add horse</string>
    <string name="add_new">Add new</string>
    <string name="add_price_and_contact_info">2-2 Add price and contact info</string>
    <string name="horse_type">Horse Type</string>
    <string name="horse_name">Horse Name</string>
    <string name="add_horse_name">Add Horse Name</string>
    <string name="father_name">Father Name</string>
    <string name="add_father_name">Add Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="add_mother_name">Add Mother Name</string>
    <string name="upload_horse_image">Upload Horse Images</string>
    <string name="is_vaccinated">Is Vaccinated</string>
    <string name="horse_gender">Horse Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="safety">Safety</string>
    <string name="please_select_horse_type">Please select horse type</string>
    <string name="horse_images">Horse Images</string>
    <string name="please_select_the_horse_images">Please select the horse images</string>
    <string name="year_">Year</string>
    <string name="years_">years</string>
    <string name="weak">Weak</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="excellent">Excellent</string>
    <string name="meter">M</string>
    <string name="cm">Cm</string>
    <string name="enter_price">Enter price</string>
    <string name="sar">SAR</string>
    <string name="enter_phone_number_to_contact">Enter phone number to contact</string>
    <string name="receive_whatsapp">Receive WhatsApp</string>
    <string name="add_product">Add Horse</string>
    <string name="sale_type">Sale Type</string>
    <string name="horse_price">Horse Price</string>
    <string name="sale_direct">Sale Direct</string>
    <string name="sale_auction">Sale Auction</string>
    <string name="is_ad_active">Is Ads Active</string>
    <string name="enter_the_starting_price_of_the_auction">Enter the starting price of the auction</string>
    <string name="vaccinate">Vaccinate</string>
    <string name="title_of_the_problem">Title of the problem</string>
    <string name="enter_the_title_of_the_problem_you_encountered_in_the_application">Enter the title of the problem you encountered in the application</string>
    <string name="complaint_summary">Complaint summary</string>
    <string name="enter_a_summary_of_the_problem_you_faced_with_the_application">Enter a summary of the problem you faced with the application</string>
    <string name="send">Send</string>
    <string name="report_type">Report Type</string>
    <string name="title_of_the_complaint">Title of the complaint</string>
    <string name="the_name_of_the_service_provider_name_of_the_service_you_intend_to_complain_about">The name of the service provider / name of the service you intend to complain about</string>
    <string name="enter_what_is_the_content_of_the_complaint_submitted">Enter what is the content of the complaint submitted</string>
</resources>