<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.raantech.solalat.user.ui.reportprovider.ReportProviderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.raantech.solalat.user.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/report_type"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/spinnerCategory"
                    style="@style/normalRegularFontStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    app:arrow_gravity="@{true}"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edittext_background"
                    android:gravity="center|start"
                    android:hint="@string/select"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/defaultTextColor"
                    android:textSize="@dimen/_12ssp"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_arrow_tint="@color/button_color"
                    app:spinner_divider_show="false"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_popup_animation="dropdown"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="14dp" />


                <com.raantech.solalat.user.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/title_of_the_complaint"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edTitle"
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/the_name_of_the_service_provider_name_of_the_service_you_intend_to_complain_about"
                    android:minHeight="@dimen/_35sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.title}"
                    android:textColor="@color/edittext_color"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="@dimen/_13ssp" />

                <com.raantech.solalat.user.ui.base.views.AppTextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/complaint_summary"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edSummery"
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_what_is_the_content_of_the_complaint_submitted"
                    android:minHeight="@dimen/_35sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.summery}"
                    android:textColor="@color/edittext_color"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="@dimen/_13ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSend"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/send" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>