<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.raantech.solalat.user.ui.technicalsupport.TechnicalSupportViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fillViewport="true"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/title_of_the_problem"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edTitle"
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_the_title_of_the_problem_you_encountered_in_the_application"
                    android:minHeight="@dimen/_35sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.title}"
                    android:textColor="@color/edittext_color"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    style="@style/textview_normal_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/complaint_summary"
                    android:textColor="@color/edittext_color"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/edSummery"
                    style="@style/textview_normal_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_a_summary_of_the_problem_you_faced_with_the_application"
                    android:minHeight="@dimen/_35sdp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.summery}"
                    android:textColor="@color/edittext_color"
                    android:textColorHint="@color/edittext_hint_color"
                    android:textSize="@dimen/_13ssp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSend"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/send" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>